@@ -1,5 +1,10 @@
 2020-05-22 Riccardo Mottola <rm@gnu.org>
 
+	* DBSoap.m 
+	Unpack nested queries and extract list of SObjects.
+
+2020-05-22 Riccardo Mottola <rm@gnu.org>
+
 	* DBFileWriter.h
 	* DBFileWriter.m
 	new formatSObject: method for formatting specific SObject complex object.
